syntax = "proto3";

message V1CreateReviewerRequestDto {
  string name = 1;
  string role = 2;
}

message V1CreateReviewerResponseDto {
  string name = 1;
  string role = 2;
}

message V1RemoveReviewerRequestDto { string id = 1; }

message V1RemoveReviewerResponseDto { string id = 1; }

enum V1ProductPattern {
  CREATE_REVIEWER = 0;
  REMOVE_REVIEWER = 1;
}

service V1ProductInterface {
  rpc createReviewer(V1CreateReviewerRequestDto)
      returns (V1CreateReviewerResponseDto);
  rpc removeReviewer(V1RemoveReviewerRequestDto)
      returns (V1CreateReviewerResponseDto);
}
